# KP_OS

./: CMakeLists.txt  client_exec.cpp  generator.py  report_os_kp.odt  server_exec.cpp
src/: client.cpp  client.h  server.cpp  server.h
